16. Prevent wrapping of "Install from another Tails" by changind letter spacing
Note that it won't work for example in German.

--- a/wiki/src/install/inc/stylesheets/assistant.css
+++ b/wiki/src/install/inc/stylesheets/assistant.css
@@ -86,7 +86,7 @@ h3, h4, p, ul {
 
 h3 {
 	font-weight: bold;
-	letter-spacing: normal;
+	letter-spacing: -0.03em;
 }
 
 p, ul, ol, h1, h2, h3, h4, h5, h6 {
